--- a/rapport/images.tex
+++ b/rapport/images.tex
@@ -30,6 +30,20 @@
 \paragraph{}
 \begin{figure}[H]
 \center
+\includegraphics[width=1\textwidth]{kibanatuto/rap/13.png}
+\label{fig:kibanatuto8}
+\caption{Camembert de répartition des logs sur la dernière semaine}
+\end{figure}
+\paragraph{}
+\begin{figure}[H]
+\center
+\includegraphics[width=1\textwidth]{kibanatuto/rap/15.png}
+\label{fig:kibanatuto9}
+\caption{Camembert de répartition des logs sur sur 3 semaines}
+\end{figure}
+\paragraph{}
+\begin{figure}[H]
+\center
 \includegraphics[width=0.8\textwidth]{kibanatuto/rap/17.png}
 \label{fig:kibanatuto10}
 \caption{Choix des visualisations}
